test/classes/bradc/syncAsClass.good
syncAsClass.chpl:7: error: unresolved call 'foo(_syncvar(int(64)))'
syncAsClass.chpl:1: note: this candidate did not match: foo(o: object)
syncAsClass.chpl:7: note: because call actual argument #1 with type _syncvar(int(64))
syncAsClass.chpl:1: note: is passed to formal 'o: object'
